added pipenv and installed libraries

--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,12 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+numpy = "*"
+pandas = "==2.2.2"
+flask = "==0.12.1"
+matplotlib = "==3.10.0"
+pylint = "==3.3.5"
+black = "==24.10.0"
 
 [dev-packages]
 
