--- a/.gitignore
+++ b/.gitignore
@@ -273,4 +273,6 @@ pyrightconfig.json
 pyvenv.cfg
 pip-selfcheck.json
 
+.gitignore
+
 # End of https://www.toptal.com/developers/gitignore/api/python,pycharm+all,venv
